--- a/templates/template_birthday_4/index.html
+++ b/templates/template_birthday_4/index.html
@@ -33,7 +33,7 @@
                             <li><a href="index.html">HOME</a></li>
                             <li><a href="#about">ABOUT</a></li>
                             <li><a href="#dateandplace">DATE & PLACE</a></li>
-                            <li><a href="#rsvp">RSVP</a></li>
+                            <li><a href="#rsvp-d">RSVP</a></li>
                             <li><a href="wishlist.html">WISH LIST</a></li>
                         </ul>
                     </div>
@@ -198,7 +198,7 @@
         <!-- Section RSVP -->
         <section id="rsvp">
             <div class="container-fluid pt-m-35p pb-m-35p pt-lg-10p pb-lg-10p text-center">
-                <div class="row">
+                <div  id="rsvp-d" class="row">
                     <div class="col-lg-12 mb-lg-10p">
                         <h2 data-aos="fade-up" >
                             Looking Forward<br/>
