--- a/templates/template_event_6/index.html
+++ b/templates/template_event_6/index.html
@@ -45,7 +45,7 @@
                             </a>
                         </li>
                         <li class="mx-5">
-                            <a href="#rsvp" class="nav-link my-5">
+                            <a href="#rsvp-d" class="nav-link my-5">
                                 RSVP
                             </a>
                         </li>
@@ -339,7 +339,7 @@
     <div class="container-fluid rsvp" id="rsvp">
         <div class="row bg-blue">
             <div class="col-10 offset-1">
-                    <div  data-aos="fade-right" data-aos-offset="-400" class="row wrap-rsvp">
+                    <div id="rsvp-d"  data-aos="fade-right" data-aos-offset="-400" class="row wrap-rsvp">
                         <div class="col-lg-11 offset-lg-1">
                         <h1 class="text-dark-blue">
                             Join Us for<br>
