--- a/templates/template_event_8/index.html
+++ b/templates/template_event_8/index.html
@@ -186,14 +186,14 @@
     <div class="container-fluid tickets">
         <div class="row">
             <div data-aos="fade-right" class="col-lg-12">
-                <div class="title pt-lg-3 pt-2">
+                <div id="tickets" class="title pt-lg-3 pt-2">
                     <h1 class="text-white font-russo offset-lg-2 offset-1 ml-4">
                         TICKETS
                     </h1>
                 </div>
             </div>
         </div>
-        <div id="tickets" class="row my-5 py-5 mx-lg-0 mx-1">
+        <div class="row my-5 py-5 mx-lg-0 mx-1">
             <div class="col-lg-10 offset-lg-1">
                 <div class="row my-lg-5">
                     <div data-aos="fade-up" class="col-lg-6 my-lg-0 my-3">
