--- a/templates/template_wedding_1/index.html
+++ b/templates/template_wedding_1/index.html
@@ -414,7 +414,7 @@
             </div>
         </div>
         <div class="row bg-green-count pb-lg-5">
-            <div id="countdown" class="col-lg-12 text-center pb-lg-5">
+            <div id="countdown" class="col-lg-12 text-center py-lg-5">
                 <h4 class="text-white font-gilroy my-lg-5 my-5">
                     just
                 </h4>
