--- a/templates/template_wedding_4/index.html
+++ b/templates/template_wedding_4/index.html
@@ -211,7 +211,7 @@
             </div>
         </section>
         <!-- Section RSVP -->
-        <section>
+        <section id="rsvp">
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-lg-5 px-lg-0 d-none d-lg-block">
