--- a/templates/template_gala_dinner/index.html
+++ b/templates/template_gala_dinner/index.html
@@ -301,7 +301,7 @@
                 </div>
             </div>
         </div>
-        <div class="container-fluid save-seat px-5" id="rsvp">
+        <div class="container-fluid save-seat px-5 py-5" id="rsvp">
             <div class="row">
                 <div data-aos="fade-left" class="col-lg-11 offset-lg-1">
                     <h1 class="text-white">
@@ -370,10 +370,10 @@
                 </div>
             </div>
         </div>
-        <div data-aos="fade-up" class="container pt-lg-5" id="our">
+        <div data-aos="fade-up" class="container pt-5" id="our">
             <div class="row">
                 <div class="col-lg-12 text-center py-lg-5 pt-4">
-                    <h1 class="text-white">
+                    <h1 class="text-white mt-lg-0 mt-5">
                         Our Partners
                     </h1>
                 </div>
