--- a/templates/template_event_6/index.html
+++ b/templates/template_event_6/index.html
@@ -82,7 +82,7 @@
                             </a>
                         </li>
                         <li class="mx-4 my-3">
-                            <a class="nav-link" href="#rsvp">
+                            <a class="nav-link" href="#rsvp-d">
                                 RSVP
                             </a>
                         </li>
@@ -115,7 +115,7 @@
                         <img data-aos="fade-up" data-aos-offset="-500" data-aos-anchor-placement=".about" class="ml-lg-3 img-fluid" src="images/brief-image-content-05.jpg">
                     </div>
                 </div>
-                <div class="col-lg-6 offset-lg-1 col-11 offset-1 content-right pr-0 pb-5 order-1 order-lg-2">
+                <div class="col-lg-6 offset-lg-1 col-11 offset-1 content-right pr-0 pb-lg-5 order-1 order-lg-2">
                     <img data-aos="fade-left" data-aos-offset="-500" data-aos-anchor-placement=".about" class="img-fluid w-100 content pl-lg-0 pl-5" src="images/brief-image-content-06.jpg">
                     <h1 class="text-white mt-5 ml-lg-5 ml-3">
                         Hawkins High
