--- a/templates/template_event_6/style_event_6.css
+++ b/templates/template_event_6/style_event_6.css
@@ -163,7 +163,7 @@ input[type=number] {
 		left: 50%;
 	}
 	.about .content-left{
-		height: 100px;
+		height: 20px;
 		padding-left: 0;
 	}
 	.about .content-left img{
@@ -178,6 +178,9 @@ input[type=number] {
     	margin-left: -75px;
 		width: 100%;
 		height: 2px;
+    }
+    .about .content-left .image-position{
+    	bottom: -340px;
     }
     .date img{
     	width: 70%;
