--- a/templates/template_event_8/index.html
+++ b/templates/template_event_8/index.html
@@ -374,7 +374,7 @@
             </div>
         </div>
     </div>
-    <div class="container-fluid updates" id="updates">
+    <div class="container-fluid updates">
         <div class="row">
             <div data-aos="fade-left" class="col-lg-12">
                 <div class="title pt-lg-3 pt-2">
@@ -384,7 +384,7 @@
                 </div>
             </div>
         </div>
-        <div data-aos="fade-up" class="row row-content px-lg-0 px-4">
+        <div  id="updates" data-aos="fade-up" class="row row-content px-lg-0 px-4">
             <div class="col-lg-8 offset-lg-2">
                 <div class="row border-bottom-white pb-lg-4">
                     <div class="col-lg-9 pt-lg-4">
