--- a/templates/template_wedding_10/index.html
+++ b/templates/template_wedding_10/index.html
@@ -476,12 +476,12 @@
         </section>
         <!-- Section RSVP -->
         <section id="rsvp">
-            <div class="container-fluid">
+            <div class="container-fluid pt-m-10p">
                 <div class="row">
                     <div class="bg"></div>
                     <img class="img-fluid motif" src="images/motif-09.png" />
                     <img class="img-fluid motif2" src="images/motif-10.png" />
-                    <div class="col-lg-12 pt-m-20p pb-m-20p pl-m-10p pr-m-10p pt-lg-15p pb-lg-15p pl-lg-5p pr-lg-5p text-center">
+                    <div class="col-lg-12 pt-m-10p pb-m-20p pl-m-10p pr-m-10p pt-lg-15p pb-lg-15p pl-lg-5p pr-lg-5p text-center">
                         <h6 id="rsvp-d" data-aos="fade-down" data-aos-offset="-4500" class="mb-m-10p mb-lg-2p">REGISTRY</h6>
                         <h2 data-aos="fade-up" data-aos-offset="-4500" class="mb-m-20p mb-lg-5p">Your presence is a gift</h2>
                         <div class="brief">
