revisi mobile dan invitation

--- a/templates/template_birthday_4/index.html
+++ b/templates/template_birthday_4/index.html
@@ -264,7 +264,7 @@
                         </div>
                     </div>
                     <div class="col-lg-12">
-                        <a target="_blank" href="invitation.pdf">Download Invitation</a>
+                        <a target="_blank" href="E Invitation.pdf">Download Invitation</a>
                     </div>
                 </div>
             </div>
