--- a/templates/template_event_5/index.html
+++ b/templates/template_event_5/index.html
@@ -347,7 +347,7 @@
                     <img src="images/button-11.png">
                 </a>
                 <br>
-                <a  class="d-inline-block" href="#">
+                <a  class="d-inline-block" href="invitation-01.jpg" target="_blank">
                     <img src="images/button-12.png">
                 </a>
             </div>
