--- a/templates/template_gala_dinner/index.html
+++ b/templates/template_gala_dinner/index.html
@@ -495,7 +495,7 @@
                 <p class="text-white mb-0">
                     lcdp-galadinner@gmail.com
                 </p>
-                <a href="#" class="text-white button-bottom">
+                <a href="e-invitation gala dinner.pdf" target="_blank" class="text-white button-bottom">
                     DOWNLOAD E-INVITATION
                 </a>
             </div>
