--- a/templates/template_grand_opening/index.html
+++ b/templates/template_grand_opening/index.html
@@ -442,7 +442,7 @@
                         <a href="#"  data-toggle="modal" data-target="#exampleModal"  class="rounded-pill bg-yellow text-white px-3 py-2 d-lg-inline d-block text-center mb-3">
                             SUBMIT
                         </a>
-                        <a href="#" class="rounded-pill border-white text-white px-3 py-2 ml-lg-2  d-lg-inline d-block text-center">
+                        <a target="_blank" href="E-INVITATION GO RESTAURANT.pdf" class="rounded-pill border-white text-white px-3 py-2 ml-lg-2  d-lg-inline d-block text-center">
                             DOWNLOAD E-INVITATION
                         </a>
                     </div>
