--- a/templates/template_event_3/index.html
+++ b/templates/template_event_3/index.html
@@ -227,7 +227,7 @@
                                             <div class="col-lg-12 pl-m-0 pr-lg-0">
                                                 <!-- <input type="submit" class="button-default" value="SUBMIT" /> -->
                                                 <input type="submit" class="button-default" data-toggle="modal" data-target="#ebrochure" value="SUBMIT" />
-                                                <a class="button-default fr" target="_blank" href="invitation.pdf">DOWNLOAD INVITATION</a>
+                                                <a class="button-default fr" target="_blank" href="e-invitation go fashion.pdf">DOWNLOAD INVITATION</a>
                                                 <div class="modal fade" id="ebrochure">
                                                     <div class="modal-dialog modal-dialog-centered">
                                                         <div class="modal-content">
