--- a/templates/template_event_6/index.html
+++ b/templates/template_event_6/index.html
@@ -393,7 +393,7 @@
                             <a href="#" class="bg-purple rounded-pill px-4 py-1 text-white"  data-toggle="modal" data-target="#form-submit">Submit</a>
                         </div>
                         <div class="col-lg-12 text-center py-lg-5 py-3">
-                            <a href="#" class="text-dark-blue">
+                            <a target="_blank" href="invitation 2-01.jpg" class="text-dark-blue">
                                 <u>
                                     Download Invitation
                                 </u>
