--- a/templates/template_wedding_3/index.html
+++ b/templates/template_wedding_3/index.html
@@ -86,7 +86,7 @@
                     <div class="col-lg-6 pt-m-35p pb-m-10p pl-m-10p pr-m-10p pt-lg-10p pb-lg-5p pr-lg-5p">
                         <div class="w-m-100p w-lg-70p">
                             <img class="motif" src="images/icon.png">
-                            <h3 class="font-maroon mb-lg-10p ml4">“True Love is About Growing as a Couple, Learning About Each Other, and Never Giving Up on Each Other”</h3>
+                            <h3 class="font-maroon mb-lg-10p ml4 slideanim">“True Love is About Growing as a Couple, Learning About Each Other, and Never Giving Up on Each Other”</h3>
                         </div>
                         <div class="w-m-100p w-lg-70p slideanim">
                             <div class="mb-lg-15p">
@@ -119,7 +119,7 @@
                                     New Faith Church<br />
                                     415 Greenwich St (at Bethune St)<br />
                                     New York, NY 10014<br />
-                                    (212) 555–0123
+                                    (212) 555–0123<br><br>
                                 </p>
                             </div>
                         </div>
@@ -153,7 +153,7 @@
                         <div class="boxc bg-brown font-white text-center">
                             <h4 class="font-white mb-lg-15">Accommodations</h4>
                             <div class="line-brown w-lg-100p mb-lg-15"></div>
-                            <p class="mb-lg-15">Your convenience is one of our concerna, we have booked you a room at this following place:</p>
+                            <p class="mb-lg-15">Your convenience is one of our concerns, we have booked you a room at this following place:</p>
                             <p><b>
                                 The Wyatt Hotel<br />
                                 55 E 10th St (at Broadway)<br />
@@ -170,22 +170,22 @@
         <!-- Section Gallery -->
         <section id="gallery">
             <div class="container-fluid pos-rel pt-lg-10p pb-lg-15p pl-lg-10p pr-lg-10p">
-                <div class="row">
+                <div class="row"  data-toggle="modal" data-target="#galleryModal">
                     <img class="motif slideanimImage6" src="images/motif.png">
                     <div class="col-lg-4 mb-lg-20 pl-lg-10 pr-lg-10 image-item slideanimImage1">
-                        <img class="img-fluid w-lg-100p" src="images/images-06.png" />
+                        <img class="img-fluid w-lg-100p" src="images/images-06.png" data-target="#carouselGallery" data-slide-to="0" />
                     </div>
                     <div class="col-lg-4 mb-lg-20 pl-lg-10 pr-lg-10 image-item slideanimImage2">
-                        <img class="img-fluid w-lg-100p" src="images/images-07.png" />
+                        <img class="img-fluid w-lg-100p" src="images/images-07.png" data-target="#carouselGallery" data-slide-to="1" />
                     </div>
                     <div class="col-lg-4 mb-lg-20 pl-lg-10 pr-lg-10 image-item slideanimImage3">
-                        <img class="img-fluid w-lg-100p" src="images/images-08.png" />
+                        <img class="img-fluid w-lg-100p" src="images/images-08.png" data-target="#carouselGallery" data-slide-to="2" />
                     </div>
                     <div class="col-lg-7 mb-lg-20 pl-lg-10 pr-lg-10 image-item slideanimImage4">
-                        <img class="img-fluid w-lg-100p" src="images/images-09.png" />
+                        <img class="img-fluid w-lg-100p" src="images/images-09.png" data-target="#carouselGallery" data-slide-to="3" />
                     </div>
                     <div class="col-lg-5 mb-lg-20 pl-lg-10 pr-lg-10 image-item slideanimImage5">
-                        <img class="img-fluid w-lg-100p" src="images/images-10.png" />
+                        <img class="img-fluid w-lg-100p" src="images/images-10.png" data-target="#carouselGallery" data-slide-to="4" />
                     </div>
                     <!-- Mobile Slider -->
                     <div class="col-12">
@@ -212,6 +212,51 @@
                 </div>
             </div>
         </section>
+        <!-- Pop up for Slider -->
+        <div class="modal fade" id="galleryModal" tabindex="-1" role="dialog" aria-hidden="true">
+            <div class="modal-dialog modal-xl" role="document">
+              <div class="modal-content">
+                <div class="modal-body">
+                  <button type="button" class="close text-white" data-dismiss="modal" aria-label="Close">
+                    <h2 class="text-white" aria-hidden="true">&times;</h2>
+                  </button>
+                </div>
+                <div class="modal-body">
+                  <div class="row">
+                      <div class="col-lg-6 offset-lg-3">
+                      <div id="carouselGallery" class="carousel slide" data-ride="carousel">
+                        <div class="carousel-inner">
+                          <div class="carousel-item active">
+                            <img class="d-block w-75 mx-auto" src="images/images-06.png" alt="First slide">
+                          </div>
+                          <div class="carousel-item">
+                            <img class="d-block w-75 mx-auto" src="images/images-07.png" alt="Second slide">
+                          </div>
+                          <div class="carousel-item">
+                            <img class="d-block w-75 mx-auto" src="images/images-08.png" alt="Third slide">
+                          </div>
+                          <div class="carousel-item">
+                            <img class="d-block w-75 mx-auto" src="images/images-09.png" alt="Third slide">
+                          </div>
+                          <div class="carousel-item">
+                            <img class="d-block w-75 mx-auto" src="images/images-10.png" alt="Third slide">
+                          </div>
+                        </div>
+                        <a class="carousel-control-prev" href="#carouselGallery" role="button" data-slide="prev">
+                          <h3 class="carousel-control-prev-icon" aria-hidden="true"></h3>
+                          <h3 class="sr-only">Previous</h3>
+                        </a>
+                        <a class="carousel-control-next" href="#carouselGallery" role="button" data-slide="next">
+                          <h3 class="carousel-control-next-icon" aria-hidden="true"></h3>
+                          <h3 class="sr-only">Next</h3>
+                        </a>
+                      </div>
+                      </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
         <!-- Section RSVP -->
         <section id="rsvp" class="bg-brown">
             <div class="container-fluid pt-m-30p pb-m-30p pt-lg-10p pb-lg-10p pl-lg-10p pr-lg-10p">
