--- a/templates/template_wedding_3/style-wedding-3.css
+++ b/templates/template_wedding_3/style-wedding-3.css
@@ -55,6 +55,10 @@
 	  	border: none;
 	  	border-radius: 50px;
 	}
+	.button-default:hover{
+		background-color: #572e32;
+		color: #fff;
+	}
 	.title-def h3{
 		display: inline-block;
 		margin: 0 0 0 4%;
@@ -487,6 +491,10 @@
 	    z-index: 1;
 	    bottom: 10%;
 	    right: 4%;
+	}
+	#galleryModal .modal-content {
+		background: none;
+		border: none;
 	}
 	#rsvp form label{
 		font-family: "Nunito SemiBold";
